Asp.net, State images + Add function

--- a/Tamagotchi/TamagotchiApp.csproj
+++ b/Tamagotchi/TamagotchiApp.csproj
@@ -87,7 +87,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="TamagotchiVM.cs" />
+    <Compile Include="ViewModel\TamagotchiVM.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
