--- a/TamagotchiWeb/TamagotchiWeb.csproj
+++ b/TamagotchiWeb/TamagotchiWeb.csproj
@@ -222,6 +222,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Resource Include="Images\Boredom.png" />
+    <Resource Include="Images\Hunger.png" />
+    <Resource Include="Images\Sleep.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
